# celflow

./: .gitignore  AI_VISUALIZATION_ROADMAP.md  CELFLOW_AI_VISUALIZATION_ROADMAP.md  CELFLOW_REFACTOR_PLAN.md  CENTRAL_AI_BRAIN_PLAN.md  CLUSTERING_GUIDE.md  DESKTOP_APP_STRATEGY.md  ENHANCED_AGENT_IMPLEMENTATION_SUMMARY.md  FILE_STRUCTURE_REORGANIZATION_PLAN.md  GEMMA_ENHANCEMENT_PLAN.md  IDEA.md  IMPLEMENTATION_PLAN.md  LAMBDA_RESTRICTIONS_FINAL_STATUS.py  LAMBDA_RESTRICTIONS_SUMMARY.md  LEARNING_PHASES.md  PERSISTENCE_GUIDE.md  PHASE3_SUMMARY.md  PYDANTIC_ENHANCEMENT_SUMMARY.md  README.md  WEB_SEARCH_IMPLEMENTATION_COMPLETE.py  WEB_SEARCH_INTEGRATION_SUMMARY.py  WEB_SEARCH_STATUS_FINAL.py  analyze_event_data.py  analyze_semantic_content.py  cursor_refactoring_selflow_to_celflow.md  debug_chat.py  demo_central_brain.py  demo_lambda_restrictions.py  docker-compose.searxng.yml  enhanced_agent_demo.py  index.html  launch_celflow.sh  launch_desktop.sh  launch_desktop_direct.sh  launch_selflow.sh  launch_tauri_tray.py  launch_tray.py  package-lock.json  package.json  project_structure.md  (+26 more)
.cursor/rules/: run.mdc
app/: __init__.py  main.py
app/ai/: advanced_context_manager.py  agent_orchestrator.py  central_brain.py  context_manager.py  embryo_trainer.py  meta_learning_system.py  ollama_client.py  pattern_validator.py  proactive_suggestion_engine.py  system_controller.py  user_interface_agent.py  visual_meta_learning.py
app/ai/prompts/: advanced_context.txt  agent_orchestration.txt  embryo_training.txt  pattern_validation.txt  proactive_suggestions.txt  system_control.txt  user_interface.txt
app/analytics/: advanced_clustering_engine.py  models.py
app/core/: agent_creator.py  agent_manager.py  central_integration.py  data_stream.py  embryo_pool.py  pattern_detector.py
app/intelligence/: __init__.py  event_clustering.py
app/privacy/: content_filter.py
app/system/: agent_interface.py  enhanced_tray.py  event_capture.py  event_persistence.py  high_performance_capture.py  macos_tray.py  permissions.py  system_integration.py  tauri_integrated_tray.py  tray_icon.py  tray_launcher.py  voice_interface.py
app/web/: dashboard.html  dashboard_server.py
backend/analysis/: analyze_event_data.py  analyze_semantic_content.py  cluster_file_operations.py  demo_central_brain.py
backend/app/: main.py
backend/app/ai/: agent_orchestrator.py  central_brain.py  code_executor.py  context_manager.py  embryo_trainer.py  enhanced_agent_workflow.py  enhanced_integration.py  enhanced_tool_system.py  enhanced_user_interface_agent.py  meta_learning_system.py  ollama_client.py  pattern_validator.py  simple_algorithm_executor.py  system_controller.py  user_interface_agent.py  visual_meta_learning.py
backend/app/analytics/: advanced_clustering_engine.py  models.py
backend/app/core/: agent_creator.py  agent_manager.py  central_integration.py  conversation_memory.py  data_stream.py  embryo_pool.py  enhanced_logging.py  multimodal_processor.py  pattern_detector.py
backend/requirements/: base.txt  clustering.txt  dev.txt  pydantic.txt  visual.txt
backend/scripts/: celflow.py  celflow_tray.py  launch_celflow.sh  launch_tauri_tray.py  launch_tray.py  run_celflow_live.py  run_visual_celflow.py
config/: ai_config.yaml  default.yaml  emergent_agents.yaml
data/: selflow_events.db
data/context/: agent_knowledge.db  conversation_history.db
docs/: README.md
docs/architecture/: AGENT_ARCHITECTURE.md  AGENT_ARCHITECTURE_PLAN.md  ARCHITECTURE.md
docs/guides/: CLUSTERING_GUIDE.md  ENHANCED_TRAY_GUIDE.md  PERSISTENCE_GUIDE.md  TAURI_DESKTOP_INTEGRATION.md  VISUAL_SELFLOW_README.md
docs/implementation/: FILE_STRUCTURE_REORGANIZATION_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  project_structure.md
docs/planning/: CENTRAL_AI_BRAIN_PLAN.md  EMERGENT_AGENTS.md  IMPLEMENTATION_PLAN.md  LEARNING_PHASES.md  PHASE1_DATA_VISUALIZATION_PLAN.md  SELFLOW_TRANSFORMATION_PLAN.md
docs/testing/: AGENT_INPUTS_OUTPUTS.md  AGENT_IO_SUMMARY.md  AGENT_TESTING_GUIDE.md
frontend/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
searxng/: docker-compose.yaml
searxng/searxng/: settings.yml
selflow-desktop/src-tauri/: tauri.conf.json
src/: App.tsx  main.tsx
src/components/: ClusteringResults.tsx  Dashboard.tsx  PatternEvolution.tsx  RecommendationsPanel.tsx  SystemOverview.tsx
src/types/: selflow.ts
tests/: test_phase3_integration.py
tools/: celflow_dashboard.py  celflow_events.py  selflow_dashboard.py  selflow_events.py  test_clustering.py
(+41 files in other folders)
